--- a/style.css
+++ b/style.css
@@ -13,7 +13,55 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
-    
+    color: whitesmoke
 
 }
+
+.hero h1{
+    font-size: 45px;
+    font-weight: 500;
+    margin-top: -50px;
+    margin-bottom: 50px;
+}
+
+.hero h1 span{
+    color: rgb(249, 143, 160)
+}
+
+textarea{
+    width: 600px;
+    height: 250px;
+    background: #403d84;
+    color: white;
+    font-size: 15px;
+    border: 0;
+    outline: 0;
+    padding: 20px;
+    border-radius: 10px;
+    resize: none;
+    margin-bottom: 30px;
+}
+
+textarea::placeholder{
+    font-size: 16px;
+    color: rgba(245, 245, 245, 0.657);
+}
+
+.row{
+    width: 60px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+button{
+    background: #ff2963;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 25px;
+    border-radius: 35px;
+    border: 0; 
+    outline: 0;
+    cursor: pointer;
+}
+
